--- a/ViewController/public_html/WEB-INF/web.xml
+++ b/ViewController/public_html/WEB-INF/web.xml
@@ -180,6 +180,12 @@
   <welcome-file-list>
     <welcome-file>faces/index.jspx</welcome-file>
   </welcome-file-list>
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsff</url-pattern>
+      <is-xml>true</is-xml>
+    </jsp-property-group>
+  </jsp-config>
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>adfAuthentication</web-resource-name>
