--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -45,3 +45,7 @@ com.dbms.csmq.model.userAccountsList.userAccountsListVO1_LABEL=User Accounts Lis
 com.dbms.csmq.model.userAccountsList.designeesByMQ_LABEL=Designees By Mq
 com.dbms.csmq.model.designee.designeeListVO_LABEL=designeeListVO
 com.dbms.csmq.model.designee.designeeListByMQVO_LABEL=Designee List By Mqvo
+com.dbms.csmq.model.WHOD.WHODExtentionListVO_LABEL=Whod Extention List Vo
+com.dbms.csmq.model.WHOD.WHODModule_LABEL=WHODModule
+com.dbms.csmq.model.product.WHODProductListVO_LABEL=Whod Product List Vo
+com.dbms.csmq.model.WHOD.WHODGroupListVO_LABEL=Whod Group List Vo
