--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -49,3 +49,7 @@ com.dbms.csmq.model.WHOD.WHODExtentionListVO_LABEL=Whod Extention List Vo
 com.dbms.csmq.model.WHOD.WHODModule_LABEL=WHODModule
 com.dbms.csmq.model.product.WHODProductListVO_LABEL=Whod Product List Vo
 com.dbms.csmq.model.WHOD.WHODGroupListVO_LABEL=Whod Group List Vo
+com.dbms.csmq.model.product.WHODProductModule_LABEL=Whod Product Module
+com.dbms.csmq.model.MQGroups.WHODMQGroups_LABEL=Whodmq Groups
+com.dbms.csmq.model.search.WHODSimpleSearch_LABEL=Whod Simple Search
+com.dbms.csmq.model.search.WHODSearchModule_LABEL=Whod Search Module
