Modified for adding relation VO for WHOD flow and pointing CQT data base

--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -53,3 +53,4 @@ com.dbms.csmq.model.product.WHODProductModule_LABEL=Whod Product Module
 com.dbms.csmq.model.MQGroups.WHODMQGroups_LABEL=Whodmq Groups
 com.dbms.csmq.model.search.WHODSimpleSearch_LABEL=Whod Simple Search
 com.dbms.csmq.model.search.WHODSearchModule_LABEL=Whod Search Module
+com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
