Dileep: Browse and Search code changes.

--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -54,3 +54,4 @@ com.dbms.csmq.model.MQGroups.WHODMQGroups_LABEL=Whodmq Groups
 com.dbms.csmq.model.search.WHODSimpleSearch_LABEL=Whod Simple Search
 com.dbms.csmq.model.search.WHODSearchModule_LABEL=Whod Search Module
 com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
+com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
