Modified for WHOD add relations insert API integration

--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -55,3 +55,4 @@ com.dbms.csmq.model.search.WHODSimpleSearch_LABEL=Whod Simple Search
 com.dbms.csmq.model.search.WHODSearchModule_LABEL=Whod Search Module
 com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
 com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
+com.dbms.csmq.model.WHOD.WhodHierarchySourceTermSearchVO_LABEL=Whod Hierarchy Source Term Search Vo
