--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -56,3 +56,4 @@ com.dbms.csmq.model.search.WHODSearchModule_LABEL=Whod Search Module
 com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
 com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
 com.dbms.csmq.model.WHOD.WhodHierarchySourceTermSearchVO_LABEL=Whod Hierarchy Source Term Search Vo
+com.dbms.csmq.model.WHOD.WhodHierarchySourceRelationSearchVO_LABEL=Whod Hierarchy Source Relation Search Vo
