Modified for adding dictionary VO and WHOD add relation page changes

--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -57,3 +57,6 @@ com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
 com.dbms.csmq.model.WHOD.WHODSmallTreeVO_LABEL=Whod Small Tree Vo
 com.dbms.csmq.model.WHOD.WhodHierarchySourceTermSearchVO_LABEL=Whod Hierarchy Source Term Search Vo
 com.dbms.csmq.model.WHOD.WhodHierarchySourceRelationSearchVO_LABEL=Whod Hierarchy Source Relation Search Vo
+com.dbms.csmq.model.WHOD.WHODReleaseStatuListVO_LABEL=Whod Release Statu List Vo
+com.dbms.csmq.model.WHOD.WHODStateListVO_LABEL=Whod State List Vo
+com.dbms.csmq.model.WHOD.WhodDictionariesListVO_LABEL=Whod Dictionaries List Vo
