--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -60,3 +60,4 @@ com.dbms.csmq.model.WHOD.WhodHierarchySourceRelationSearchVO_LABEL=Whod Hierarch
 com.dbms.csmq.model.WHOD.WHODReleaseStatuListVO_LABEL=Whod Release Statu List Vo
 com.dbms.csmq.model.WHOD.WHODStateListVO_LABEL=Whod State List Vo
 com.dbms.csmq.model.WHOD.WhodDictionariesListVO_LABEL=Whod Dictionaries List Vo
+com.dbms.csmq.model.WHOD.WHODGroupLevelVO_LABEL=Whod Group Level Vo
