Modified for fixing search/create/update flow issues

--- a/Model/src/com/dbms/csmq/model/ModelBundle.properties
+++ b/Model/src/com/dbms/csmq/model/ModelBundle.properties
@@ -61,3 +61,5 @@ com.dbms.csmq.model.WHOD.WHODReleaseStatuListVO_LABEL=Whod Release Statu List Vo
 com.dbms.csmq.model.WHOD.WHODStateListVO_LABEL=Whod State List Vo
 com.dbms.csmq.model.WHOD.WhodDictionariesListVO_LABEL=Whod Dictionaries List Vo
 com.dbms.csmq.model.WHOD.WHODGroupLevelVO_LABEL=Whod Group Level Vo
+com.dbms.csmq.model.WHOD.WhoDictionaryLevelListVO_LABEL=Who Dictionary Level List Vo
+com.dbms.csmq.model.WHOD.WhoDesigneeListVO_LABEL=Who Designee List Vo
